--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -25,4 +25,61 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+} */
+
+
+.bg1 {
+  background-color: red;
+}
+
+.bg2 {
+  background-color: green;
+}
+
+.bg3 {
+  background-color: yellow;
+}
+
+
+.bucketContainer{
+  display: flex;
+}
+.bucket{
+  padding: 1rem;
+  display: inline-flex;
+  background-color: #3f3160;
+  min-height: 500px;
+  width: 360px;
+  margin: 10px;
+  justify-content: space-between;
+  color: #fff ;
+  border: 2px solid #3f3160;
+  border-radius: 1rem;
+}
+
+.toDolist{
+ position: relative;
+ padding: 1rem;
+ min-height: 350px;
+ overflow: auto;
+}
+
+
+.addBucketMsg{
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  padding: 15.5rem;
+}
+
+.bucketMsgP{
+  margin: 15px;
+}
+
+.toDolistInput{
+  width: 11rem;
+}
+
+.listItem{
+  padding: 15px;
 }
