--- a/src/App.css
+++ b/src/App.css
@@ -60,8 +60,8 @@
 .toDolist{
  position: relative;
  padding: 1rem;
- min-height: 350px;
- overflow: auto;
+ height: 350px;
+ overflow: scroll;
 }
 
 
